solucion en traslado de turno

--- a/views/secretaria/secretariaTrasladar.pug
+++ b/views/secretaria/secretariaTrasladar.pug
@@ -7,22 +7,19 @@ html(lang="es")
         link(rel="stylesheet" href="/css/footerNuevo.css")
         link(rel="stylesheet" href="/css/headerSecretaria.css")
         link(rel="stylesheet" href="/css/secretariaTrasladarTurno.css")
+        link(rel="stylesheet" href="/css/autocompletar_estilos.css")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
     body(class="secretariaTrasladarTurno")
         include ../includes/headerSecretaria
         main(class="mainContent")
             h1(class="titulo") Trasladar Turno
             form(method="POST" action=`/turnos/trasladar/${turno.id}` class="formTurnos")
-                h3 Selecciona un Profesional
-                if profesionales && profesionales.length
-                    select(name="profesional_especialidad_id" id="profesional" required class="profesionalSelect")
-                        option(value="" selected disabled) Selecciona un profesional
-                            each profesional in profesionales
-                                option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
-                else
-                    p(class="noProfesionales") no se encontraron profesionales
+                h3 Buscar un Profesional
+                .autocompletar_contenedor
+                    input(type="text" id="profesional-search" class="autocompletar_input" placeholder="Buscar por apellido o nombre..." autocomplete="off")
+                    input(type="hidden" name="profesional_especialidad_id" id="profesional-id" required)
                 label(for="fecha" class="fechaLabel") Selecciona la fecha:
-                input(type="text" name="fecha" id="fecha" required class="fechaInput")
+                input(type="text" name="fecha" id="fecha" required class="fechaInput" readonly)
                 label(for="horario" class="horarioLabel") Selecciona un horario:
                 select(name="hora" id="horario" required class="horarioSelect")
                     option(value="" selected disabled class="horarioOption") Selecciona un horario
@@ -34,4 +31,7 @@ html(lang="es")
         include ../includes/footer
         script(src="/js/logout.js")
         script(src="/js/horarios.js")
+        script(src="/js/autocompletar_profesional.js")
         script(src="https://cdn.jsdelivr.net/npm/flatpickr")
+        script.
+            const autocompletarProfesional = new AutocompletarProfesional('profesional-search', 'profesional-id');
