logica de ausencias

--- a/views/secretaria/secretariaCrearAusencia.pug
+++ b/views/secretaria/secretariaCrearAusencia.pug
@@ -6,6 +6,7 @@ html
         link(rel="stylesheet" href="/css/secretariaCrearAusencia.css")
         link(rel="stylesheet" href="/css/footerNuevo.css")
         link(rel="stylesheet" href="/css/headerSecretaria.css")
+        link(rel="stylesheet" href="/css/autocompletar_estilos.css")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
         link(rel='stylesheet', href='https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css')
     body
@@ -15,19 +16,19 @@ html
 
         form(id="form" method="POST" action="/agendas/ausencias/registrar")
             div
-                label(for="profesional_especialidad_id") Profesional:
-                select(name="profesional_especialidad_id" id="profesional_especialidad_id" required)
-                    option(value="" disabled selected) Selecciona un profesional
-                    each profesional in profesionales
-                        option(value=profesional.id) #{profesional.nombre_completo} - #{profesional.especialidad}
+                label(for="profesional-search") Profesional:
+                .autocompletar_contenedor
+                    input(type="text" id="profesional-search" placeholder="Buscar profesional..." class="autocompletar_input" required)
+                    input(type="hidden" name="profesional_especialidad_id" id="profesional-id" required)
+                    .autocompletar_resultados
 
             div
                 label(for="fecha_inicio") Fecha inicio:
-                input(type="text" name="fecha_inicio" id="fecha_inicio", required)
+                input(type="text" name="fecha_inicio" id="fecha_inicio", required, readonly)
 
             div
                 label(for="fecha_fin") Fecha fin:
-                input(type="text" name="fecha_fin" id="fecha_fin", required)
+                input(type="text" name="fecha_fin" id="fecha_fin", required, readonly)
 
             div
                 label(for="tipo") Tipo de ausencia:
@@ -59,10 +60,13 @@ html
                     td
                         button.btn-eliminar(type="button" data-id=a.id) Eliminar
 
+script(src="/js/autocompletar_profesional.js")
 script(src="/js/ausencias.js")
 script(src="https://cdn.jsdelivr.net/npm/flatpickr")
 script(src="https://code.jquery.com/jquery-3.7.1.min.js")
 script(src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js")
 script(src="/js/tablafecha.js")
+script.
+    const autocompletarProfesional = new AutocompletarProfesional('profesional-search', 'profesional-id');
 script(src="/js/logout.js")
 include ../includes/footer
