--- a/views/login.pug
+++ b/views/login.pug
@@ -74,3 +74,4 @@ html(lang="es")
               button.btnLogin(type="submit") Registrarse
     script(type="module" src="/js/login.js")
     script(type="module" src="/js/loginTabs.js")
+    script(type="module" src="/js/registerValidation.js")
